spark and tachyon built from source with hadoop version dependencies, packer can run init.sh scipts to do this on the image